Implement two-factor authentication (2FA) setup and verification, update JWT properties, and refactor cache handling